force-app/main/default/objects/Product__c/fields/InStock__c.field-meta.xml
<CustomField>
    <fullName>InStock__c</fullName>
    <label>InStock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>