force-app/main/default/objects/Product__c/fields/ProductLabel__c.field-meta.xml
<CustomField>
    <fullName>ProductLabel__c</fullName>
    <label>ProductLabel</label>
    <length>127</length>
    <type>Text</type>
</CustomField>