force-app/main/default/objects/Product__c/fields/ProductPrice__c.field-meta.xml
<CustomField>
    <fullName>ProductPrice__c</fullName>
    <label>ProductPrice</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>